# TextureExtractorV2

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile001  README.md
DerivedData/ModuleCache/: Session.modulevalidation
DerivedData/TextureExtractorV2/: info.plist
TextureExtractorV2/: Arguments.h  Bitmap.cpp  Bitmap.hpp  Camera.cpp  Camera.hpp  DataCostExtractionManager.cpp  DataCostExtractionManager.hpp  DataCostsExtractor.cpp  DataCostsExtractor.hpp  Display.cpp  Display.hpp  Edge.cpp  Edge.hpp  ExtractionWorker.cpp  ExtractionWorker.hpp  ExtractionWorker_applyGradient.cpp  ExtractionWorker_commonCode.cpp  ExtractionWorker_extend.cpp  ExtractionWorker_extract.cpp  ExtractionWorker_fillTextureTriangleColor.cpp  Gradient.cpp  Gradient.hpp  Mesh.cpp  Mesh.hpp  Misc.h  PatchQuality.h  Rasterizer.cpp  Rasterizer.hpp  RenderContext.h  TextureEdge.cpp  TextureEdge.hpp  TextureExtractor.cpp  TextureExtractor.hpp  TextureExtractor_mapMap.cpp  TextureGradient.cpp  TextureGradient.hpp  TexturePatch.cpp  TexturePatch.hpp  Timer.cpp  Timer.hpp  (+6 more)
TextureExtractorV2.xcodeproj/: project.pbxproj
TextureExtractorV2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TextureExtractorV2/mapmap/: full.h
TextureExtractorV2/stb/: stb_image.h  stb_image_write.h
doc/html/: _arguments_8h.html  _arguments_8h.js  _arguments_8h__dep__incl.map  _arguments_8h__dep__incl.md5  _arguments_8h__incl.map  _arguments_8h__incl.md5  _arguments_8h_source.html  _bitmap_8cpp.html  _bitmap_8cpp.js  _bitmap_8cpp__incl.map  _bitmap_8hpp.html  (+421 more)
example/: demo.ini  example.ini  list3.txt  list3small.txt
(+395 files in other folders)
